@@ -1,270 +1,238 @@
+import com.github.spotbugs.snom.Confidence
+import com.github.spotbugs.snom.Effort
+import com.github.spotbugs.snom.SpotBugsTask
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.jetbrains.kotlin.gradle.dsl.KotlinVersion
+
 plugins {
     id 'base'
-    id 'pmd'
-    id 'com.diffplug.spotless' version '5.7.0'
-    id 'com.github.hierynomus.license' version '0.15.0'
+    id 'com.github.spotbugs' version '6.0.7'
+    id 'org.jetbrains.kotlin.jvm' version '2.0.0'
+    id 'com.google.devtools.ksp' version '2.0.0-1.0.24'
 }
-
-repositories {
-    mavenCentral()
-}
-
-Properties env = new Properties()
-rootProject.file('.env').withInputStream { env.load(it) }
-
-if (!env.containsKey('VERSION')) {
-    throw new Exception('Version not specified in .env file...')
-}
-
-def createLicenseWith = { File license, String startComment, String endComment, String lineComment, boolean isPython ->
-    /*
-    In java, we don't have a second linter/styling tool other than spotless so it doesn't really
-    matter if we write a newline or not for startComment/endComment.
-
-    However, in python, we are using black that double-checks and reformats the code.
-    Thus, writing an extra empty newline (not removed by trimTrailingWhitespace() is actually a
-    big deal and would be reformatted (removed) because of black's specs.
-    */
-    def tmp = File.createTempFile('tmp', '.tmp')
-    tmp.withWriter {
-        def w = it
-        if (startComment.length() > 0 || !isPython) {
-            w.writeLine(startComment)
-        }
-        license.eachLine {
-            w << lineComment
-            w.writeLine(it)
-        }
-        if (endComment.length() > 0 || !isPython) {
-            w.writeLine(endComment)
-        }
-        w.writeLine("")
-        if (isPython) {
-            w.writeLine("")
-        }
-    }
-    return tmp
-}
-
-def createPythonLicenseWith = { license ->
-    return createLicenseWith(license, '', '', '', true)
-}
-
-def createJavaLicenseWith = { license ->
-    return createLicenseWith(license, '/*', ' */', ' * ', false)
-}
-
-// We are the spotless exclusions rules using file tree. It seems the excludeTarget option is super finicky in a
-// monorepo setup and it doesn't actually exclude directories reliably. This code makes the behavior predictable.
-def createSpotlessTarget = { pattern ->
-    def excludes = [
-        '.gradle',
-        'node_modules',
-        '.eggs',
-        '.mypy_cache',
-        '.venv',
-        '*.egg-info',
-        'build',
-        'dbt-project-template',
-        'dbt_data_tests',
-        'dbt_schema_tests',
-        'normalization_test_output',
-        'tools',
-        'secrets'
-    ]
-
-    if (System.getenv().containsKey("CORE_ONLY")) {
-        excludes.add("airbyte-integrations/connectors")
-    }
-
-    return fileTree(dir: rootDir, include: pattern, exclude: excludes.collect { "**/${it}" })
-}
-
-spotless {
-    java {
-        target createSpotlessTarget('**/*.java')
-
-        importOrder()
-
-        eclipse('4.16.0').configFile(rootProject.file('tools/gradle/codestyle/java-google-style.xml'))
-
-        licenseHeaderFile createJavaLicenseWith(rootProject.file('LICENSE'))
-        removeUnusedImports()
-        trimTrailingWhitespace()
-    }
-    groovyGradle {
-        target createSpotlessTarget('**/*.gradle')
-    }
-    sql {
-        target createSpotlessTarget('**/*.sql')
-
-        dbeaver().configFile(rootProject.file('tools/gradle/codestyle/sql-dbeaver.properties'))
-    }
-    format 'styling', {
-        target createSpotlessTarget(['**/*.yaml', '**/*.json'])
-
-        prettier()
-    }
-}
-check.dependsOn 'spotlessApply'
 
 allprojects {
     apply plugin: 'base'
+    apply plugin: 'java'
+    apply plugin: 'java-test-fixtures'
+    apply plugin: 'com.github.spotbugs'
+    apply plugin: 'org.jetbrains.kotlin.jvm'
+    apply plugin: 'com.google.devtools.ksp'
+    apply plugin: 'idea'
 
-    afterEvaluate { project ->
-        def composeDeps = [
-                ":airbyte-config:init",
-                ":airbyte-db",
-                ":airbyte-migration",
-                ":airbyte-scheduler:app",
-                ":airbyte-server",
-                ":airbyte-webapp",
-        ].toSet().asImmutable()
 
-        if (project.getPath() in composeDeps) {
-            composeBuild.dependsOn(project.getPath() + ':assemble')
-        }
-    }
-}
-
-allprojects {
-    // by default gradle uses directory as the project name. That works very well in a single project environment but
+    // By default gradle uses directory as the project name. That works very well in a single project environment but
     // projects clobber each other in an environments with subprojects when projects are in directories named identically.
     def sub = rootDir.relativePath(projectDir.parentFile).replace('/', '.')
     group = "io.${rootProject.name}${sub.isEmpty() ? '' : ".$sub"}"
-    project.archivesBaseName = "${project.group}-${project.name}"
+    project.base.archivesName = "${project.group}-${project.name}"
 
-    version = env.VERSION
-}
-
-// Java projects common configurations
-subprojects {
-
-    if (project.name == 'airbyte-webapp' || project.name == 'airbyte-e2e-testing') {
-        return
+    // Produce reproducible archives
+    // (see https://docs.gradle.org/current/userguide/working_with_files.html#sec:reproducible_archives)
+    tasks.withType(AbstractArchiveTask).configureEach {
+        preserveFileTimestamps = false
+        reproducibleFileOrder = true
     }
 
-    apply plugin: 'java'
-    apply plugin: 'jacoco'
-
-    sourceCompatibility = JavaVersion.VERSION_14
-    targetCompatibility = JavaVersion.VERSION_14
-
-    repositories {
-        mavenCentral()
+    // Common configurations for 'assemble'.
+    tasks.withType(Tar).configureEach {
+        duplicatesStrategy DuplicatesStrategy.INCLUDE
+    }
+    tasks.withType(Zip).configureEach {
+        duplicatesStrategy DuplicatesStrategy.INCLUDE
+        // Disabling distZip causes the build to break for some reason, so: instead of disabling it, make it fast.
+        entryCompression ZipEntryCompression.STORED
     }
 
-    pmd {
-        consoleOutput = true
+    // Convenience task to list all dependencies per project
+    tasks.register('listAllDependencies', DependencyReportTask) {}
 
-        rulePriority = 5
-        ruleSets = []
-        ruleSetFiles = files(rootProject.file('tools/gradle/pmd/rules.xml'))
+    // Common java configurations
+
+    java {
+        withSourcesJar()
+        withJavadocJar()
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
+        compileJava {
+            options.compilerArgs += ["-Werror", "-Xlint:all,-serial,-processing"]
+        }
+        compileTestJava {
+            //rawtypes and unchecked are necessary for mockito
+            //deprecation and removal are removed from error since we should still test those constructs.
+            options.compilerArgs += ["-Werror", "-Xlint:all,-serial,-processing,-rawtypes,-unchecked,-deprecation,-removal"]
+        }
+        compileTestFixturesJava {
+            //rawtypes and unchecked are necessary for mockito
+            options.compilerArgs += ["-Werror", "-Xlint:all,-serial,-processing,-rawtypes,-unchecked"]
+        }
+    }
+
+    tasks.named('sourcesJar').configure {
+        dependsOn tasks.matching { it.name == 'generate' }
+    }
+
+    compileKotlin {
+        compilerOptions {
+            jvmTarget = JvmTarget.JVM_21
+            languageVersion = KotlinVersion.KOTLIN_1_9
+            allWarningsAsErrors = true
+            freeCompilerArgs = ["-Xjvm-default=all"]
+        }
+        dependsOn {
+            tasks.matching { it.name == 'generate' }
+        }
+    }
+    compileTestKotlin {
+        compilerOptions {
+            jvmTarget = JvmTarget.JVM_21
+            languageVersion = KotlinVersion.KOTLIN_1_9
+            allWarningsAsErrors = true
+            freeCompilerArgs = ["-Xjvm-default=all"]
+        }
+        dependsOn {
+            tasks.matching { it.name == 'generate' }
+        }
+    }
+    compileTestFixturesKotlin {
+        compilerOptions {
+            jvmTarget = JvmTarget.JVM_21
+            languageVersion = KotlinVersion.KOTLIN_1_9
+            allWarningsAsErrors = true
+            freeCompilerArgs = ["-Xjvm-default=all"]
+        }
+        dependsOn {
+            tasks.matching { it.name == 'generate' }
+        }
+    }
+
+    configurations.all {
+        resolutionStrategy {
+            preferProjectModules()
+        }
+    }
+
+    idea {
+        module {
+            downloadJavadoc = true
+            downloadSources = true
+        }
+    }
+
+    spotbugs {
+        ignoreFailures = false
+        effort = Effort.valueOf('MAX')
+        excludeFilter.set rootProject.file('spotbugs-exclude-filter-file.xml')
+        reportLevel = Confidence.valueOf('HIGH')
+        showProgress = false
+        toolVersion = '4.8.3'
     }
 
     test {
         useJUnitPlatform()
         testLogging() {
-            events 'failed'
+            events 'skipped', 'started', 'passed', 'failed'
             exceptionFormat 'full'
-            // showStandardStreams = true
+            // Swallow the logs when running in airbyte-ci, rely on test reports instead.
+            showStandardStreams = !System.getenv().containsKey("RUN_IN_AIRBYTE_CI")
         }
-        finalizedBy jacocoTestReport
-    }
+        reports {
+            junitXml {
+                outputPerTestCase = true
+            }
+        }
 
-    jacocoTestReport {
-        dependsOn test
+        // This is required by mockito, see https://github.com/mockito/mockito/issues/3037.
+        jvmArgs "-XX:+EnableDynamicAgentLoading"
+        // This is also required, to prevent stderr spam starting with
+        //   "OpenJDK 64-Bit Server VM warning: Sharing is only supported for boot loader cl..."
+        jvmArgs "-Xshare:off"
+        // needed because we make ThreadLocal.get(Thread) accessible in IntegrationRunner.stopOrphanedThreads
+        jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
+
+        // Set the timezone to UTC instead of picking up the host machine's timezone,
+        // which on a developer's laptop is more likely to be PST.
+        systemProperty 'user.timezone', 'UTC'
+
+        // Enable parallel test execution in JUnit by default.
+        // This is to support @Execution(ExecutionMode.CONCURRENT) annotations
+        // See https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution for details.
+        systemProperty 'junit.jupiter.execution.parallel.enabled', 'true'
+        // Concurrency takes place at the class level.
+        systemProperty 'junit.jupiter.execution.parallel.mode.classes.default', 'concurrent'
+        // Within a class, the test methods are still run serially on the same thread.
+        systemProperty 'junit.jupiter.execution.parallel.mode.default', 'same_thread'
+        // Effectively disable JUnit concurrency by running tests in only one thread by default.
+        systemProperty 'junit.jupiter.execution.parallel.config.strategy', 'fixed'
+        systemProperty 'junit.jupiter.execution.parallel.config.fixed.parallelism', 1
+        // Order test classes by annotation.
+        systemProperty 'junit.jupiter.testclass.order.default', 'org.junit.jupiter.api.ClassOrderer$OrderAnnotation'
+        systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
+
+        if (!project.hasProperty('testExecutionConcurrency')) {
+            // By default, let gradle spawn as many independent workers as it wants.
+            maxParallelForks = Runtime.runtime.availableProcessors()
+            maxHeapSize = '3G'
+        } else {
+            // Otherwise, run tests within the same JVM.
+            // Let gradle spawn only one worker.
+            maxParallelForks = 1
+            maxHeapSize = '8G'
+            // Manage test execution concurrency in JUnit.
+            String concurrency = project.property('testExecutionConcurrency').toString()
+            if (concurrency.isInteger() && (concurrency as int) > 0) {
+                // Define a fixed number of threads when the property is set to a positive integer.
+                systemProperty 'junit.jupiter.execution.parallel.config.fixed.parallelism', concurrency
+            } else {
+                // Otherwise let JUnit manage the concurrency dynamically.
+                systemProperty 'junit.jupiter.execution.parallel.config.strategy', 'dynamic'
+            }
+        }
+        String junitMethodExecutionTimeout
+        if (project.hasProperty('JunitMethodExecutionTimeout')) {
+            junitMethodExecutionTimeout = project.property('JunitMethodExecutionTimeout').toString()
+        } else {
+            junitMethodExecutionTimeout = '1 m'
+        }
+        systemProperty 'JunitMethodExecutionTimeout', junitMethodExecutionTimeout
     }
 
     dependencies {
-        if (project.name != 'airbyte-commons') {
-            implementation project(':airbyte-commons')
-        }
+        // JUnit dependencies.
+        def vAssertJ = "3.25.3"
+        def vJUnit = "5.10.2"
+        def vJUnitJupiter = "5.11.0"
 
-        implementation(platform("com.fasterxml.jackson:jackson-bom:2.10.4"))
-        implementation(platform("org.glassfish.jersey:jersey-bom:2.31"))
+        testFixturesImplementation platform("org.junit:junit-bom:${vJUnit}")
+        testFixturesImplementation "org.junit.jupiter:junit-jupiter-api:${vJUnit}"
+        testFixturesImplementation "org.junit.jupiter:junit-jupiter-params:${vJUnit}"
+        testFixturesImplementation "org.mockito:mockito-junit-jupiter:${vJUnitJupiter}"
+        testFixturesImplementation "org.assertj:assertj-core:${vAssertJ}"
 
-        // version is handled by "com.fasterxml.jackson:jackson-bom:2.10.4", so we do not explicitly set it here.
-        implementation 'com.fasterxml.jackson.core:jackson-databind'
-        implementation 'com.fasterxml.jackson.core:jackson-annotations'
-        implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
+        testImplementation platform("org.junit:junit-bom:${vJUnit}")
+        testImplementation "org.junit.jupiter:junit-jupiter-api:${vJUnit}"
+        testImplementation "org.junit.jupiter:junit-jupiter-params:${vJUnit}"
+        testImplementation "org.mockito:mockito-junit-jupiter:${vJUnitJupiter}"
+        testImplementation "org.assertj:assertj-core:${vAssertJ}"
+        testImplementation 'org.mockito.kotlin:mockito-kotlin:5.2.1'
 
-        implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
+        testRuntimeOnly platform("org.junit:junit-bom:${vJUnit}")
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${vJUnit}"
 
-        implementation group: 'commons-io', name: 'commons-io', version: '2.7'
-
-        implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
-
-        // SLF4J as a facade over Log4j2 required dependencies
-        implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
-        implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
-        implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.11.0'
-
-        // Bridges from other logging implementations to SLF4J
-        implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.30' // JUL bridge
-        implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.30' //JCL bridge
-        implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.30' // log4j1.2 bridge
-
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
-        testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.1'
-        testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.9.0'
+        // Spotbugs dependencies.
+        def vSpotbugs = "4.8.3"
+        implementation "com.github.spotbugs:spotbugs-annotations:${vSpotbugs}"
     }
-}
 
-task composeBuild {
-    def buildTag = System.getenv('VERSION') ?: 'dev'
-    doFirst {
-        exec {
-            workingDir rootDir
-            commandLine 'docker-compose', '-f', 'docker-compose.build.yaml', 'build', '--parallel', '--quiet'
-            environment 'VERSION', buildTag
+    tasks.withType(SpotBugsTask).configureEach {
+        // Reports can be found under each subproject in build/spotbugs/
+        reports {
+            xml.required = false
+            html.required = true
         }
     }
-}
-build.dependsOn(composeBuild)
 
-task('generate') {
-    dependsOn subprojects.collect { it.getTasksByName('generateSeed', true) }
-    dependsOn subprojects.collect { it.getTasksByName('generateProtocolClassFiles', true) }
-    dependsOn subprojects.collect { it.getTasksByName('generateJsonSchema2Pojo', true) }
-}
-
-task('format') {
-    dependsOn generate
-    dependsOn spotlessApply
-    dependsOn subprojects.collect { it.getTasksByName('airbytePythonFormat', true) }
-}
-
-// add licenses for python projects.
-subprojects {
-    def pythonFormatTask = project.tasks.findByName('blackFormat')
-
-    if(pythonFormatTask != null) {
-        apply plugin: "com.github.hierynomus.license"
-        task licenseFormatPython(type: com.hierynomus.gradle.license.tasks.LicenseFormat) {
-            header = createPythonLicenseWith(rootProject.file('LICENSE'))
-            source = fileTree(dir: projectDir)
-                    .include("**/*.py")
-                    .exclude(".venv/**/*.py")
-                    .exclude("**/__init__.py")
-            strictCheck = true
-        }
-        def licenseTask = project.tasks.findByName('licenseFormatPython')
-        blackFormat.dependsOn licenseTask
-        isortFormat.dependsOn licenseTask
-        flakeCheck.dependsOn licenseTask
-
-        def generateFilesTask = project.tasks.findByName('generateProtocolClassFiles')
-        if(generateFilesTask != null) {
-            licenseTask.dependsOn generateFilesTask
-        }
+    javadoc {
+        options.addStringOption('Xdoclint:none', '-quiet')
     }
-}
-
-// produce reproducible archives
-// (see https://docs.gradle.org/current/userguide/working_with_files.html#sec:reproducible_archives)
-tasks.withType(AbstractArchiveTask) {
-    preserveFileTimestamps = false
-    reproducibleFileOrder = true
 }
